--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   firebase_storage:
   firebase_analytics:
   carousel_slider:
+  syncfusion_flutter_calendar:
 dev_dependencies:
   flutter_test:
     sdk: flutter
