--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   carousel_slider:
   syncfusion_flutter_calendar:
   simple_time_range_picker:
+  intl: ^0.19.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
